--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -47,7 +47,7 @@ apps:
       - x11
       - desktop
       - desktop-legacy
-      - auto-playback
+      - audio-playback
       - home
       - removable-media
       - gsettings
